add logotext color in css

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)">
 					<div class="carousel-caption"> <div>
-						<h2 class="heading animated bounceInDown">Easy going customizable!</h2>
+						<h2 class="heading animated bounceInDown">Easy customizable!</h2>
 						<p class="animated bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">Why With Us?</h2>
-				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+				<p><a class="logotext" >For Myanmar</a> is the best for your website. </p>
 			</div>
 		</div>
 		<div class="about-us">
