--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div class="text-center">
 			<div class="col-sm-8 col-sm-offset-2">
 				<h2 class="title-one">Why With Us?</h2>
-				<p><a class="logotext" >For Myanmar</a> is the best for your website. </p>
+				<p><a class="logotext" >For Myanmar</a> is the best choice for your website especially if you are looking for easy building, affordable price and strong customer support service. There are many website building services in Myanmar, among them <a class="logotext" >For Myanmar</a> offer lowest price for supporting small and medium businesses around the country to be online presents. We also encouraging internet literacy by huge tutorials for beginners. </p>
 			</div>
 		</div>
 		<div class="about-us">
