--- a/index.html
+++ b/index.html
@@ -72,24 +72,24 @@
 				<div class="item active" style="background-image: url(images/slider/slide3.jpg)">
 					<div class="carousel-caption">
 						<div>
-							<h2 class="heading animated bounceInDown">Create your website Now!</h2>
-							<p class="animated bounceInUp">Start from 5000 Kyats per month.</p>
+							<h2 class="heading HeaderText animated bounceInDown">Create your website Now!</h2>
+							<p class="animated HeaderText bounceInUp">Start from 5000 Kyats per month.</p>
 							<a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
 						</div>
 					</div>
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)">
 					<div class="carousel-caption"> <div>
-						<h2 class="heading animated bounceInDown">Easy customizable!</h2>
-						<p class="animated bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
+						<h2 class="heading HeaderText animated bounceInDown">Easy customizable!</h2>
+						<p class="animated HeaderText bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
 					</div>
 				</div>
 			</div>
 			<div class="item" style="background-image: url(images/slider/slide1.jpg)">
 				<div class="carousel-caption">
 					<div>
-						<h2 class="heading animated bounceInRight">Customer Support Center </h2>
-						<p class="animated bounceInLeft">For your any technical issues </p>
+						<h2 class="heading HeaderText animated bounceInRight">Customer Support Center </h2>
+						<p class="animated HeaderText bounceInLeft">For your any technical issues </p>
 						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
 					</div>
 				</div>
