remove contact form

--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-sm-6">
+										<!--<div class="col-sm-6">
 											<div id="contact-form-section">
 												<div class="status alert alert-success" style="display: none"></div>
 												<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
@@ -795,7 +795,7 @@
 														</div>
 													</form>
 												</div>
-											</div>
+											</div>-->
 										</div>
 									</div>
 								</div>
