change font awesome icons

--- a/index.html
+++ b/index.html
@@ -196,21 +196,21 @@
 						<div class="services row">
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-th"></i>
+									<i class="fa fa-star"></i>
 									<h2>Modern Design</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-html5"></i>
+									<i class="fa fa-star"></i>
 									<h2>Web Development</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="single-service">
-									<i class="fa fa-users"></i>
+									<i class="fa fa-star"></i>
 									<h2>Online Marketing</h2>
 									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
 								</div>
