edited till portfolio

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 						<div>
 							<h2 class="heading HeaderText animated bounceInDown">Create your website Now!</h2>
 							<p class="animated HeaderText bounceInUp">Start from 5000 Kyats per month.</p>
-							<a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
+							<a class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
 						</div>
 					</div>
 				</div>
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)">
 					<div class="carousel-caption"> <div>
 						<h2 class="heading HeaderText animated bounceInDown">Easy customizable!</h2>
-						<p class="animated HeaderText bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
+						<p class="animated HeaderText bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
 					</div>
 				</div>
 			</div>
@@ -90,7 +90,7 @@
 					<div>
 						<h2 class="heading HeaderText animated bounceInRight">Customer Support Center </h2>
 						<p class="animated HeaderText bounceInLeft">For your any technical issues </p>
-						<a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
+						<a class="btn btn-default slider-btn animated bounceInUp" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
 					</div>
 				</div>
 			</div>
@@ -117,14 +117,14 @@
 					<ul class="nav nav-tabs">
 						<li class="active"><a href="#about" data-toggle="tab"><i class="fa fa-chain-broken"></i> About</a></li>
 						<li><a href="#mission" data-toggle="tab"><i class="fa fa-th-large"></i> Mission</a></li>
-						<li><a href="#community" data-toggle="tab"><i class="fa fa-users"></i> Community</a></li>
+						<li><a href="#support" data-toggle="tab"><i class="fa fa-users"></i> Support</a></li>
 					</ul>
 					<div class="tab-content">
 						<div class="tab-pane fade in active" id="about">
 							<div class="media">
 								<img class="pull-left media-object" src="images/about-us/about.jpg" alt="about us">
 								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+									<p><a class="logotext" >For Myanmar</a> is a <a class="highlighttext">Web Hosting Company</a>, founded by <a class="highlighttext">Soe Paing</a> since 2011.</p>
 								</div>
 							</div>
 						</div>
@@ -132,15 +132,15 @@
 							<div class="media">
 								<img class="pull-left media-object" src="images/about-us/mission.jpg" alt="Mission">
 								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci </p>
+									<p>Our mission is to support <a class="highlighttext">Myanmar businesses</a>, especially <a class="highlighttext">small and medium businesses</a>, who have less financial and technical power for market competitions. <a class="logotext" >For Myanmar</a> fills this needs and encourage Myanmar Startup Businesses to grow up.</p>
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane fade" id="community">
+						<div class="tab-pane fade" id="support">
 							<div class="media">
-								<img class="pull-left media-object" src="images/about-us/community.jpg" alt="Community">
+								<img class="pull-left media-object" src="images/about-us/support.jpg" alt="Support">
 								<div class="media-body">
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. </p>
+									<p>We have <a class="highlighttext">warmly welcome support centre</a> as our mission is to support small and medium businesses, who have less financial and technical power. </p>
 								</div>
 							</div>
 						</div>
@@ -187,7 +187,7 @@
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="title-one">Services</h2>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+					<p>Our Services for Website Hosting offer customers by <a class="highlighttext">three main packages</a>: Basic, Master and Pro. <a class="highlighttext">Basic Package</a> is suitable for small businesses and for those who needs light weight website. <a class="highlighttext">Master Package</a> is for those whose business is really depends on website and it will give free domain name and ssl certificate. <a class="highlighttext">Pro Package</a> is for those who have power to handle more sofisticated website by allowing advanced features such as ssh access and unlimited databases, etc. </p>
 				</div>
 			</div>
 			<div class="row">
@@ -195,24 +195,27 @@
 					<div class="our-service">
 						<div class="services row">
 							<div class="col-sm-4">
+								 <div class="single-service">
+									 <i class="fa fa-star"></i>
+									 <h2>Basic Package</h2>
+									 <p>Storage 5 GB</br> Bandwidth 10 GB</p>
+                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97yxvfLTjQLVwqZhJNIqJZh3kodjTKW0a235CyEPMdvI1kQ/viewform?usp=pp_url&entry.1144870388&entry.676293771&entry.1536274174&entry.1265548563=Basic" class="btn btn-primary" >Order</a>
+								 </div>
+							</div>
+							<div class="col-sm-4">
 								<div class="single-service">
 									<i class="fa fa-star"></i>
-									<h2>Modern Design</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+									<h2>Master Package</h2>
+									<p></p>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97yxvfLTjQLVwqZhJNIqJZh3kodjTKW0a235CyEPMdvI1kQ/viewform?usp=pp_url&entry.1144870388&entry.676293771&entry.1536274174&entry.1265548563=Master" class="btn btn-primary" >Order</a>
 								</div>
 							</div>
 							<div class="col-sm-4">
 								<div class="single-service">
 									<i class="fa fa-star"></i>
-									<h2>Web Development</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy </p>
-								</div>
-							</div>
-							<div class="col-sm-4">
-								<div class="single-service">
-									<i class="fa fa-star"></i>
-									<h2>Online Marketing</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+									<h2>Pro Package</h2>
+									<p></p>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97yxvfLTjQLVwqZhJNIqJZh3kodjTKW0a235CyEPMdvI1kQ/viewform?usp=pp_url&entry.1144870388&entry.676293771&entry.1536274174&entry.1265548563=Pro" class="btn btn-primary" >Order</a>
 								</div>
 							</div></div>
 						</div>
@@ -226,7 +229,7 @@
 				<div class="row text-center">
 					<div class="col-sm-8 col-sm-offset-2">
 						<h2 class="title-one">Meet The Team</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>
+						<p>Stay in touch with our team members to get help you and to subscribe us on social media.</p>
 					</div>
 				</div>
 				<div id="team-carousel" class="carousel slide" data-interval="false">
@@ -237,14 +240,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member1.jpg" alt="team member" />
-									<h4>William Hurt</h4>
-									<h5>Sr. Web Developer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<h4>Dr. Soe Paing</h4>
+									<h5>Web Developer</h5>
+									<p>Founder and CEO of <a class="logotext" >For Myanmar</a>. Interested in Web Developing, Programming and Server Security.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -252,14 +254,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member2.jpg" alt="team member" />
-									<h4>Alekjandra Jony</h4>
+									<h4>Thet Htar Htet</h4>
 									<h5>Creative Designer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and Cheif of Designing Squad. Always have brilliant idea of Website designs. And she loves her job.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -267,14 +268,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member3.jpg" alt="team member" />
-									<h4>Paul Johnson</h4>
+									<h4>Yu Wah</h4>
 									<h5>Skilled Programmer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and she always done her job precisely, so less bugs. She loves to code and do it all day long. </p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -282,14 +282,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member4.jpg" alt="team member" />
-									<h4>John Richerds</h4>
+									<h4>Thu Zar</h4>
 									<h5>Marketing Officer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and Leader of Marketing squad. She is expert in Marketing Strategy and social relation skill.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -299,29 +298,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member1.jpg" alt="team member" />
-									<h4>William Hurt</h4>
-									<h5>Sr. Web Developer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<h4>Dr. Soe Paing</h4>
+									<h5>Web Developer</h5>
+									<p>Founder and CEO of <a class="logotext" >For Myanmar</a>. Interested in Web Developing, Programming and Server Security.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
-										<a href="#"><i class="fa fa-linkedin"></i></a>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm-6 col-md-3">
-								<div class="single-member">
-									<img src="images/our-team/member3.jpg" alt="team member" />
-									<h4>Paul Johnson</h4>
-									<h5>Skilled Programmer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
-									<div class="socials">
-										<a href="#"><i class="fa fa-facebook"></i></a>
-										<a href="#"><i class="fa fa-twitter"></i></a>
-										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -329,14 +312,27 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member2.jpg" alt="team member" />
-									<h4>Alekjandra Jony</h4>
+									<h4>Thet Htar Htet</h4>
 									<h5>Creative Designer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and Cheif of Designing Squad. Always have brilliant idea of Website designs. And she loves her job.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
+										<a href="#"><i class="fa fa-linkedin"></i></a>
+									</div>
+								</div>
+							</div>
+							<div class="col-sm-6 col-md-3">
+								<div class="single-member">
+									<img src="images/our-team/member3.jpg" alt="team member" />
+									<h4>Yu Wah</h4>
+									<h5>Skilled Programmer</h5>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and she always done her job precisely, so less bugs. She loves to code and do it all day long. </p>
+									<div class="socials">
+										<a href="#"><i class="fa fa-facebook"></i></a>
+										<a href="#"><i class="fa fa-twitter"></i></a>
+										<a href="#"><i class="fa fa-google-plus"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -344,14 +340,13 @@
 							<div class="col-sm-6 col-md-3">
 								<div class="single-member">
 									<img src="images/our-team/member4.jpg" alt="team member" />
-									<h4>John Richerds</h4>
+									<h4>Thu Zar</h4>
 									<h5>Marketing Officer</h5>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod</p>
+									<p>Co-founder of <a class="logotext" >For Myanmar</a> and Leader of Marketing squad. She is expert in Marketing Strategy and social relation skill.</p>
 									<div class="socials">
 										<a href="#"><i class="fa fa-facebook"></i></a>
 										<a href="#"><i class="fa fa-twitter"></i></a>
 										<a href="#"><i class="fa fa-google-plus"></i></a>
-										<a href="#"><i class="fa fa-dribbble"></i></a>
 										<a href="#"><i class="fa fa-linkedin"></i></a>
 									</div>
 								</div>
@@ -367,7 +362,7 @@
 				<div class="row text-center">
 					<div class="col-sm-8 col-sm-offset-2">
 						<h2 class="title-one">Portfolio</h2>
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit.</p>
+						<p>You can install and setup almost all website publishing software with a few clicks with softaculous installer. Here are the screenshots of some popular cms you can create.</p>
 					</div>
 				</div>
 				<ul class="portfolio-filter text-center">
@@ -390,7 +385,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3 col-xs-12 portfolio-item jooma">
+						<div class="col-sm-3 col-xs-12 portfolio-item joomla">
 							<div class="view efffect" >
 								<div class="portfolio-image">
 									<img src="images/portfolio/2.jpg" alt="">
@@ -406,13 +401,13 @@
 						<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
 							<div class="view efffect">
 								<div class="portfolio-image">
-									<img src="images/portfolio/3.jpg" alt="">
+									<img src="images/portfolio/wordpress-1-small.jpg" alt="">
 								</div>
 								<div class="mask text-center">
-								<h3>Novel</h3>
-								<h4>Lorem ipsum dolor sit amet consectetur</h4>
+								<h3>Wordpress</h3>
+								<h4>Wordpress is most popular and easy to create.</h4>
 								<a href="#"><i class="fa fa-link"></i></a>
-								<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+								<a href="images/portfolio/wordpress-1-big.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 							</div>
 						</div>
 					</div>
@@ -444,13 +439,13 @@
 				<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
 					<div class="view efffect">
 						<div class="portfolio-image">
-							<img src="images/portfolio/6.jpg" alt="">
+							<img src="images/portfolio/wordpress-2-small.jpg" alt="">
 						</div>
 						<div class="mask text-center">
-							<h3>Novel</h3>
-							<h4>Lorem ipsum dolor sit amet consectetur</h4>
+							<h3>Wordpress</h3>
+							<h4>Wordpress is most popular and easy to create.</h4>
 							<a href="#"><i class="fa fa-link"></i></a>
-							<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+							<a href="images/portfolio/wordpress-2-big.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 						</div>
 					</div>
 				</div>
@@ -495,12 +490,12 @@
 					<div class="col-sm-3 col-xs-12 portfolio-item wordpress">
 						<div class="view efffect">
 							<div class="portfolio-image">
-								<img src="images/portfolio/10.jpg" alt=""></div>
+								<img src="images/portfolio/wordpress-3-small.jpg" alt=""></div>
 								<div class="mask text-center">
-									<h3>Novel</h3>
-									<h4>Lorem ipsum dolor sit amet consectetur</h4>
+									<h3>Wordpress</h3>
+									<h4>Wordpress is most popular and easy to create.</h4>
 									<a href="#"><i class="fa fa-link"></i></a>
-									<a href="images/portfolio/big-item.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
+									<a href="images/portfolio/wordpress-3-big.jpg" data-gallery="prettyPhoto"><i class="fa fa-search-plus"></i></a>
 								</div>
 							</div>
 						</div>
