toc and privacy

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			<div class="row text-center">
 				<div class="col-sm-8 col-sm-offset-2">
 					<h2 class="title-one">Services</h2>
-					<p>Our Services for Website Hosting offer customers by <a class="highlighttext">three main packages</a>: Basic, Master and Pro. <a class="highlighttext">Basic Package</a> is suitable for small businesses and for those who needs light weight website. <a class="highlighttext">Master Package</a> is for those whose business is really depends on website and it will give free domain name and ssl certificate. <a class="highlighttext">Pro Package</a> is for those who have power to handle more sofisticated website by allowing advanced features such as ssh access and unlimited databases, etc. </p>
+					<p>Our Services for Website Hosting offer customers by <a class="highlighttext">three main packages</a>: Basic, Master and Pro. <a class="highlighttext">Basic Package</a> is suitable for small businesses and for those who needs light weight website. <a class="highlighttext">Master Package</a> is for those whose business is really depends on website and it will give free ssl certificate. <a class="highlighttext">Pro Package</a> is for those who have power to handle more sofisticated website by allowing advanced features such as free .com domain, ssh access and unlimited databases, etc. </p>
 				</div>
 			</div>
 			<div class="row">
