--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+
+	<!-- Facebook Pixel Code -->
+	<script>
+	  !function(f,b,e,v,n,t,s)
+	  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	  n.queue=[];t=b.createElement(e);t.async=!0;
+	  t.src=v;s=b.getElementsByTagName(e)[0];
+	  s.parentNode.insertBefore(t,s)}(window, document,'script',
+	  'https://connect.facebook.net/en_US/fbevents.js');
+	  fbq('init', '2122311721388345');
+	  fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	  src="https://www.facebook.com/tr?id=2122311721388345&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
+
 </head><!--/head-->
 <body>
 	<div class="preloader">
@@ -767,7 +787,7 @@
 										<div class="col-sm-6">
 											<div class="contact-address"><address><p><a class="logotext" >For Myanmar</a></p><strong>580, Thapyay Street<br>Ward-45, Dagon Myo Thit (North)<br> Yangon, Myanmar</strong><br><small>( +95.972973223 +95.9444692131 +95.9421020677 )</small></address>
 												<div class="social-icons">
-													<a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a>
+													<a href="https://fb.me/formyanmar.site"><i class="fa fa-facebook"></i></a><a href="https://twitter.com/ForMyanmar"><i class="fa fa-twitter"></i></a>
 													<a href="#"><i class="fa fa-google-plus"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
 													<a href="#"><i class="fa fa-linkedin"></i></a>
 												</div>
