--- a/index.html
+++ b/index.html
@@ -94,7 +94,13 @@
 						<div>
 							<h2 class="heading HeaderText animated bounceInDown">Create your website Now!</h2>
 							<p class="animated HeaderText bounceInUp">Start from 5000 Kyats per month.</p>
-							<a class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
+							<a id="orderbutton" class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
+							<script type="text/javascript">
+							$( '#$orderbutton' ).click(function() {
+	            <script>
+	             fbq('track', 'InitiateCheckout');}
+	            </script>
+              </script>
 						</div>
 					</div>
 				</div>
