fb event track code fix

--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
 							<script type="text/javascript">
 							$( '#$orderbutton' ).click(function() {
 	            <script>
-	             fbq('track', 'InitiateCheckout');}
+	             fbq('track', 'InitiateCheckout');
 	            </script>
+						} 
               </script>
 						</div>
 					</div>
