fb event track fix 3

--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 							<a id="orderbutton" class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
 							<script type="text/javascript">
 							$( '#$orderbutton' ).click(function() {
-	            <script>
+	            //<script>
 	             fbq('track', 'InitiateCheckout');
-	            </script>
-						} );
+	            //</script>
+						  });
               </script>
 						</div>
 					</div>
