title added to tocnppolicy

--- a/terms_of_service_privacy_policy.html
+++ b/terms_of_service_privacy_policy.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>For Myanmar Terms of Service and Privacy Policy</title>
+</head>
 
-
+<body>
 <h2>For Myanmar Terms of Service and Privacy Policy</h2>
 
 <h3>1. Terms</h3>
@@ -67,5 +72,5 @@
   </ul>
 
   <p>We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. For Myanmar may change this privacy policy from time to time at For Myanmar's sole discretion.</p>
-
-Share
+</body>
+</html>
