meta property added to index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+<!--
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Creative One Page Parallax Template">
 	<meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" />
 	<meta name="author" content="">
+-->
+  <meta property="og:image" content="formyanmar-logo-big" />
+	<meta property="og:description" content="Web Hosting with affordable price" />
+	<meta property="og:url"content="https://formyanmar.site" />
+	<meta property="og:title" content="For Myanmar" />
+
 	<title>For Myanmar | Services for Myanmar People</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/prettyPhoto.css" rel="stylesheet">
