og image url bug fix

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="Creative, Onepage, Parallax, HTML5, Bootstrap, Popular, custom, personal, portfolio" />
 	<meta name="author" content="">
 -->
-  <meta property="og:image" content="formyanmar-logo-big" />
+  <meta property="og:image" content="formyanmar-logo-big.png" />
 	<meta property="og:description" content="Web Hosting with affordable price" />
 	<meta property="og:url"content="https://formyanmar.site" />
 	<meta property="og:title" content="For Myanmar" />
