add hfm cart link remove pro package

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<div class="item" style="background-image: url(images/slider/slide2.jpg)">
 					<div class="carousel-caption"> <div>
 						<h2 class="heading HeaderText animated bounceInDown">Easy customizable!</h2>
-						<p class="animated HeaderText bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
+						<p class="animated HeaderText bounceInUp">Helping you with Video Tutorials </p> <a class="btn btn-default slider-btn animated fadeIn" href="https://host.formyanmar.site/cart.php">Order Now</a>
 					</div>
 				</div>
 			</div>
@@ -124,7 +124,7 @@
 					<div>
 						<h2 class="heading HeaderText animated bounceInRight">Customer Support Center </h2>
 						<p class="animated HeaderText bounceInLeft">For your any technical issues </p>
-						<a class="btn btn-default slider-btn animated bounceInUp" href="https://goo.gl/forms/JyzfwCkWx5HVf2A32">Order Now</a>
+						<a class="btn btn-default slider-btn animated bounceInUp" href="https://host.formyanmar.site/cart.php">Order Now</a>
 					</div>
 				</div>
 			</div>
@@ -241,17 +241,11 @@
 									<i class="fa fa-star"></i>
 									<h2>Master Package</h2>
 									<p>Storage - 10 GB</br> Bandwidth - 20 GB </br> Max FTP Accounts - 10 </br> Max Email Accounts - 10 </br> Max Databases - 10 </br> Max Sub Domains - 10 </br> Max Parked Domains - 10 </br> Max Addon Domains - 10 </br> Free ssl certificates - Yes </br> Price - 10000 MMK/month</p>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97yxvfLTjQLVwqZhJNIqJZh3kodjTKW0a235CyEPMdvI1kQ/viewform?usp=pp_url&entry.1144870388&entry.676293771&entry.1536274174&entry.1265548563=Master" class="btn btn-primary" >Order</a>
+                  <a href="https://host.formyanmar.site/cart.php?a=add&pid=2" class="btn btn-primary" >Order</a>
 								</div>
 							</div>
-							<div class="col-sm-4">
-								<div class="single-service">
-									<i class="fa fa-star"></i>
-									<h2>Pro Package</h2>
-									<p>Storage - &#8734;</br> Bandwidth - &#8734; </br> Max FTP Accounts - &#8734; </br> Max Email Accounts - &#8734; </br> Max Databases - &#8734; </br> Max Sub Domains - &#8734; </br> Max Parked Domains - &#8734; </br> Max Addon Domains - &#8734; </br> Free ssl certificates - Yes </br> Free .com Domain Name - 1 </br> Price - 100000 MMK/Year</p>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSe97yxvfLTjQLVwqZhJNIqJZh3kodjTKW0a235CyEPMdvI1kQ/viewform?usp=pp_url&entry.1144870388&entry.676293771&entry.1536274174&entry.1265548563=Pro" class="btn btn-primary" >Order</a>
-								</div>
-							</div></div>
+							
+							</div>
 						</div>
 					</div>
 				</div>
