pro package changed to monthly

--- a/index.html
+++ b/index.html
@@ -244,7 +244,14 @@
                   <a href="https://host.formyanmar.site/cart.php?a=add&pid=2" class="btn btn-primary" >Order</a>
 								</div>
 							</div>
-							
+							<div class="col-sm-4">
+								<div class="single-service">
+									<i class="fa fa-star"></i>
+									<h2>Pro Package</h2>
+									<p>Storage - &#8734;</br> Bandwidth - &#8734; </br> Max FTP Accounts - &#8734; </br> Max Email Accounts - &#8734; </br> Max Databases - &#8734; </br> Max Sub Domains - &#8734; </br> Max Parked Domains - &#8734; </br> Max Addon Domains - &#8734; </br> Free ssl certificates - Yes </br> Price - 20000 MMK/Month</p>
+                  <a href="https://host.formyanmar.site/cart.php?a=add&pid=4" class="btn btn-primary" >Order</a>
+								</div>
+							</div>
 							</div>
 						</div>
 					</div>
